@@ -1,8 +1,7 @@
 package org.voovan.tools;
 
 import org.voovan.tools.log.Logger;
-import sun.misc.Unsafe;
-
+import jdk.internal.misc.Unsafe;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.concurrent.ConcurrentHashMap;
